--- a/generated_resume.html
+++ b/generated_resume.html
@@ -1,138 +1,134 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Resume - Harshit Singh</title>
-<style>
-    body {
-      font-family: "Times New Roman", serif;
-      margin: 0;
-      padding: 0;
-      background-color: #ffffff;
-    }
-    .header {
-      text-align: center;
-      padding: 1em;
-    }
-    .header h1 {
-      margin: 0;
-      font-size: 24px;
-    }
-    .header p {
-      margin: 0;
-      font-size: 16px;
-      color: #666666;
-    }
-    .content {
-      padding: 1em;
-      background-color: #f2f2f2;
-    }
-    .section {
-      margin-bottom: 20px;
-      background-color: #ffffff;
-      padding: 1em;
-      border-radius: 5px;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-      border: 1px solid black; /* Add this line for a black border */
-    }
-    .section h2 {
-      margin: 0 0 10px;
-      font-size: 20px;
-    }
-    .item {
-      margin: 0 0 10px;
-    }
-    .item strong {
-      font-weight: bold;
-    }
-    ul {
-      margin: 0;
-      padding-left: 20px;
-    }
-  </style>
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Template For FAANG</title>
+    <link href="../dist/output.css"  rel="stylesheet">
 </head>
-<body>
-    
-    <title>Resume - Harshit Singh</title>
-</head>
-<body>
-  <header class="header">
-    <div class="name-title">
-      <h1>Harshit Singh</h1>
-      <p>+917428503570 | 2K20/SE/59 | hs104208@gmail.com</p>
-    </div>
-  </header>
+<body class="font-serif">
 
-   
-  <div class="content">
-    <div class="section">
-      <h2>Objective</h2>
-      <p>Software Engineer with 2+ years of experience in XXX, seeking full-time XXX roles.</p>
+    <!-- Main header -->
+    <div class="flex flex-col items-center justify-center mt-6 space-y-2">
+        <h1 class="text-4xl font-medium">HIMALI VARSHNEY KUMAR</h1>
+        <p>+1(901) 413-3008 ⋄ Germantown, TN</p>
+        <p>
+            <a href="himalivk@gmail.com" class="text-blue-700 text-sm">himalivk@gmail.com</a>
+            ⋄ <a href="https://www.linkedin.com/in/himali/" class="text-blue-700 text-sm">linkedin.com/in/himali</a>
+        </p>
     </div>
-    <div class="section">
-      <h2>Education</h2>
-      <p><strong>B.Tech (Software Engineering)</strong>, Delhi Technological University, New Delhi (2020-2024)</p>
-      <p>CGPA: 8.5</p>
-      <p><strong>CBSE (Class XII)</strong>, Himalaya Public School (2019)</p>
-      <p>Percentage: 93.2%</p>
-      <p><strong>CBSE (Class X)</strong>, Jindal International School (2017)</p>
-      <p>Percentage: 93.1%</p>
+
+    <!-- Rest Stuff -->
+    <div class="ml-4 mr-4 space-y-6 mb-8">
+
+
+        <!-- Objective -->
+        <div class="space-y-2">
+            <p class="font-bold border-b-2 border-black">CAREER SUMMARY</p>
+            <ul class="list-disc ml-6">
+                <li>Data Management Leader with 15+ years of experience in retail, logistics, and manufacturing industries.</li>
+                <li>Led the Data Management strategy for AutoZone, including establishing an Enterprise Reporting COE, building Data Lakes on the Google Cloud, and implementing MLops and Data integration self-service platforms.</li>
+                <li>Successfully led multiple modernization programs, improving performance and reducing outages for reporting and analytics at AutoZone and delivering a $300M+ Pricing and Revenue Modernization program at FedEx.</li>
+                <li>Experienced in coaching and transforming teams, increasing employee morale, and building high-performing global teams.</li>
+                <li>Thorough understanding of Data Governance and regulatory compliances, supporting internal audits for sales compliance.</li>
+            </ul>
+        </div>
+
+
+        <!-- Professional Experience -->
+        <div class="space-y-2">
+            <p class="font-bold border-b-2 border-black">PROFESSIONAL EXPERIENCE</p>
+            <!-- AutoZone -->
+            <div>
+                <div class="flex justify-between">
+                    <p class="text-left"><span class="font-bold">Director, IT Data Management</span></p>
+                    <p class="text-right">Dec 2019 - Present</p>
+                </div> 
+                <div class="flex justify-between">
+                    <p class="text-left">AutoZone</p>
+                    <p class="text-right italic">Memphis, TN</p>
+                </div>
+                <ul class="list-disc ml-6">
+                    <li>Handpicked by CTO/CIO to drive a $7 million budget and establish and execute the data strategy for AutoZone.</li>
+                    <li>Led a team of 75+ members across multiple locations, transforming the workforce from support and maintenance to developing and implementing a data strategy in the Cloud.</li>
+                    <li>Improved daily sales and hours reporting process, resulting in stabilized reporting process with 99.999% uptime, reduced delivery issues, and meeting the 5 am SLA for delivering the report.</li>
+                    <li>Established an Enterprise Reporting COE, optimizing a 10-year-old reporting system, achieving SLA reporting time and reduced reporting errors.</li>
+                    <li>Conceived and implemented a Database Purge & Archive process, resulting in improved application response time, reduced risk of security audit failure, and storage savings.</li>
+                    <li>Migrated store development report to a stable and supported Enterprise Reporting platform, eliminating potential fines and audit costs.</li>
+                    <li>Identified and developed a business case for batch load replication, enabling batch load replication and improving Oracle GoldenGate ULA utilization.</li>
+                    <li>Road mapped and implemented a Data Lake in Google Cloud Platform for Human Resources and expanded the data lake for e-commerce, customer, sales, and orders teams.</li>
+                    <li>Converted a problematic dashboard into a true real-time open task dashboard, reducing computing costs and improving performance.</li>
+                    <li>Consolidated contracts and increased team capacity, resulting in cost savings and improved efficiency.</li>
+                    <li>Supported internal audits and ensured compliance with regulatory requirements.</li>
+                </ul>                  
+            </div>
+            <!-- FedEx -->
+            <div>
+                <div class="flex justify-between">
+                    <p class="text-left"><span class="font-bold">Manager IT, Enterprise Data Analytics</span></p>
+                    <p class="text-right">Jan 2012 - Nov 2019</p>
+                </div> 
+                <div class="flex justify-between">
+                    <p class="text-left">FedEx</p>
+                    <p class="text-right italic">Memphis, TN</p>
+                </div>
+                <ul class="list-disc ml-6">
+                    <li>Reported to the VP, leveraging advanced analytics and big data technologies to deliver next-generation business capabilities.</li>
+                    <li>Led a team of 11+ members, supporting the big data lake and establishing an Enterprise Analytics COE.</li>
+                    <li>Procured and implemented a data analytics platform with Dataiku, streamlining data pipeline and achieving faster data analytics.</li>
+                    <li>Onboarded big data projects onto the Hadoop platform, using the Data Dojo concept to onboard business teams in a 2-week sprint.</li>
+                    <li>Conducted a Delay Predictions Summit, bringing together teams to review processes and recommend improvements.</li>
+                    <li>Established an Enterprise Analytics COE, breaking data leadership silos and launching various initiatives to increase collaboration and adoption of analytic capabilities.</li>
+                    <li>Managed a $300M global pricing and revenue modernization program, leading a team of 150+ professionals and achieving significant revenue growth.</li>
+                </ul>                  
+            </div>
+        </div>
+
+
+        <!-- Education -->
+        <div class="space-y-2">
+            <p class="font-bold border-b-2 border-black">EDUCATION</p>
+            <div class="flex justify-between">
+                <p class="text-left"><span class="font-bold">Master of Business Administration (MBA), Business Analytics</span>, Kelley School of Business</p>
+                <p class="text-right">Year of Completion: N/A</p>
+            </div>  
+            <div class="flex justify-between">
+                <p class="text-left"><span class="font-bold">Bachelor of Engineering, Computer Science and Technology</span>, Indian Institute of Technology, Roorkee</p>
+                <p class="text-right">Year of Completion: N/A</p>
+            </div>  
+        </div>
+
+
+        <!-- Skills -->
+        <div class="space-y-2">
+            <p class="font-bold border-b-2 border-black">SKILLS</p>
+            <div>
+                <p><span class="font-bold">Technical Skills: </span>Data Management, Data Governance, Cloud Computing, Database Administration</p>
+                <p><span class="font-bold">Soft Skills: </span>Leadership, Team Management, Communication, Problem Solving</p>
+            </div>
+        </div>
+
+
+        <!-- Projects -->
+        <div class="space-y-2">
+            <p class="font-bold border-b-2 border-black">PROJECTS</p>
+            <div>
+                <p><span class="font-semibold text-sm">Data Management Strategy for AutoZone.</span> Led the development and implementation of a data management strategy for AutoZone, including establishing an Enterprise Reporting COE, building Data Lakes on the Google Cloud, and implementing MLops and Data integration self-service platforms.</p>
+            </div>
+            <div>
+                <p><span class="font-semibold text-sm">Pricing and Revenue Modernization at FedEx.</span> Successfully delivered a $300M+ pricing and revenue modernization program at FedEx, leading a team of 150+ professionals and achieving significant revenue growth.</p>
+            </div>
+        </div>
+
+        <!-- Leadership -->
+        <div class="space-y-2">
+            <p class="font-bold border-b-2 border-black">LEADERSHIP</p>
+            <ul class="list-disc ml-6">
+                <li>Coached and transformed teams to increase employee morale and create high-performing teams.</li>
+                <li>Built, led, and augmented multiple large global teams throughout my career.</li>
+                <li>Admin for the FAANGPath Discord community, facilitating online events and career conversations.</li>
+            </ul> 
+        </div>
     </div>
-    <div class="section">
-      <h2>Skills</h2>
-      <div class="item"><strong>Technical Skills:</strong> C, C++, Python, TensorFlow, Keras, Pandas, Sklearn, Streamlit, Numpy</div>
-      <div class="item"><strong>Tools:</strong> VSCode, Colab, Sublime, Kaggle, Gitlab, Github, PostMan</div>
-    </div>
-    <div class="section">
-      <h2>Experience</h2>
-      <div class="item">
-        <h3>ML Intern</h3>
-        <p>DESKERA (Remote), June 2023 - August 2023</p>
-        <ul>
-          <li>Developed a chatbot enabling seamless data migration between platforms, involving file conversion logic, API development, and backend work.</li>
-          <li>Enhanced user experience by crafting intuitive prompts for the chatbot and explored error-checking ML models for data migration reliability.</li>
-        </ul>
-      </div>
-      <div class="item">
-        <h3>Intern</h3>
-        <p>Apkiwebsite.com, Delhi, Sept 2021 - April 2022</p>
-        <ul>
-          <li>Gained hands-on experience in WordPress development, customizing themes, and optimizing website performance.</li>
-          <li>Learned essential interpersonal skills and effective client communication, gaining insights into real-world project dynamics.</li>
-        </ul>
-      </div>
-    </div>
-    <div class="section">
-      <h2>Projects</h2>
-      <div class="item">
-        <h3>Fake News Detection</h3>
-        <p>Utilized Deep Learning and Machine Learning techniques to identify fake news.</p>
-        <p>Implemented models for detection, enhancing media literacy.</p>
-      </div>
-      <div class="item">
-        <h3>Complex Repo Ranking</h3>
-        <p>Developed a tool to rank the most intricate repositories in a user's GitHub profile.</p>
-        <p>Utilized the GitHub API and LLM to predict the complexity score for each of the repositories.</p>
-      </div>
-      <div class="item">
-        <h3>Stock Prediction</h3>
-        <p>Employed LSTM and Random Forest on real-time Yahoo Finance dataset and Tiingo.</p>
-        <p>Predicted stock trends for informed decision-making.</p>
-      </div>
-    </div>
-    <div class="section">
-      <h2>Extra-Curricular Activities</h2>
-      <div class="item">Ex-Rajiv Gandhi Stadium football team member, honing leadership in regular matches.</div>
-      <div class="item">Start-up involvement (apkiwebsite.com, theeskape.com, bigybiz) for web development and entrepreneurship skills.</div>
-    </div>
-    <div class="section">
-      <h2>Positions of Responsibility</h2>
-      <div class="item">Co-founded Dr's café and successfully organized many events.</div>
-      <div class="item">Organized a team of good people for my startup - theeskape.com.</div>
-      <div class="item">Worked as a team leader in different projects for hackathons.</div>
-    </div>
-  </div>
 </body>
 </html>
