--- a/generated_resume_with_css.html
+++ b/generated_resume_with_css.html
@@ -645,12 +645,13 @@ video {
 <body class="font-serif">
 <!-- Main header -->
 <div class="flex flex-col items-center justify-center mt-6 space-y-2">
-<h1 class="text-4xl font-medium">HARSHIT SINGH</h1>
-<p>+917428503570 ⋄ New Delhi, India</p>
+<h1 class="text-4xl font-medium">Harshit Singh</h1>
+<p>+91 7428503570 ⋄ Delhi, India</p>
 <p>
 <a class="text-blue-700 text-sm" href="mailto:hs104208@gmail.com">hs104208@gmail.com</a>
-            ⋄ <a class="text-blue-700 text-sm" href="https://www.linkedin.com/in/harshit-singh-2k20/">linkedin.com/in/harshit-singh-2k20</a>
-            ⋄ <a class="text-blue-700 text-sm" href="https://github.com/harshit-singh-2k20">github.com/harshit-singh-2k20</a>
+            ⋄ <a class="text-blue-700 text-sm" href="https://github.com/harshitsingh85420">GitHub</a>
+            ⋄ <a class="text-blue-700 text-sm" href="https://www.linkedin.com/in/harshit-singh-3a0a8b1a4/">LinkedIn</a>
+            ⋄ <a class="text-blue-700 text-sm" href="https://www.kaggle.com/harshitsingh85420">Kaggle</a>
 </p>
 </div>
 <!-- Rest Stuff -->
@@ -658,21 +659,21 @@ video {
 <!-- Objective -->
 <div class="space-y-2">
 <p class="font-bold border-b-2 border-black">OBJECTIVE</p>
-<p>Software Engineer with 2+ years of experience in XXX, seeking full-time XXX roles</p>
+<p>Software Engineering student with a strong background in problem-solving, analysis, and data manipulation. Seeking full-time software testing engineer roles to apply my skills in a challenging and dynamic environment.</p>
 </div>
 <!-- Education -->
 <div class="space-y-2">
 <p class="font-bold border-b-2 border-black">EDUCATION</p>
 <div class="flex justify-between">
-<p class="text-left"><span class="font-bold">B.TECH(Software Engineering)</span>, Delhi Technological University, New Delhi</p>
-<p class="text-right">2020-2024</p>
+<p class="text-left"><span class="font-bold">BTech (Software Engineering)</span>, Delhi Technological University, New Delhi</p>
+<p class="text-right">2020-24</p>
 </div>
 <div class="flex justify-between">
-<p class="text-left"><span class="font-bold">CBSE (Class XII)</span>, Himalaya Public School</p>
+<p class="text-left"><span class="font-bold">CBSE(Class XII)</span>, Himalaya Public Sc, New Delhi</p>
 <p class="text-right">2019</p>
 </div>
 <div class="flex justify-between">
-<p class="text-left"><span class="font-bold">CBSE (Class X)</span>, Jindal International School</p>
+<p class="text-left"><span class="font-bold">CBSE(Class X)</span>, Jindal International School, New Delhi</p>
 <p class="text-right">2017</p>
 </div>
 </div>
@@ -680,40 +681,43 @@ video {
 <div class="space-y-2">
 <p class="font-bold border-b-2 border-black">SKILLS</p>
 <div>
-<p><span class="font-bold">Technical Skills: </span>C, C++, Python, TensorFlow, Keras, Pandas, Sklearn, Streamlit, Numpy</p>
-<p><span class="font-bold">Tools: </span>VSCode, Colab, Sublime, Kaggle, Gitlab, Github, PostMan</p>
+<p><span class="font-bold">Analytical:</span> SQL, Microsoft Office Suite (Excel, PowerPoint, Word), Canva, Python (Pandas, NumPy, Scikit Learn)</p>
+<p><span class="font-bold">Languages:</span> C++, C, Python</p>
+<p><span class="font-bold">Technical Knowledge:</span> Machine Learning, Deep learning, NLP, SNLU, Prompt Engineering, LLM</p>
+<p><span class="font-bold">Framework:</span> TensorFlow, Keras, Pandas, Scikit-Learn, Streamlit, NumPy, Matplotlib</p>
+<p><span class="font-bold">Tools:</span> VSCode, Sublime, Google Colab, Kaggle, Git, GitLab, GitHub</p>
 </div>
 </div>
 <!-- Experience -->
 <div class="space-y-2">
-<p class="font-bold border-b-2 border-black">EXPERIENCE</p>
-<!-- Internship 01  -->
+<p class="font-bold border-b-2 border-black">WORK EXPERIENCE</p>
+<!-- Exp01  -->
 <div>
 <div class="flex justify-between">
-<p class="text-left"><span class="font-bold">ML Intern</span></p>
+<p class="text-left"><span class="font-bold">ML Intern, DESKERA</span></p>
 <p class="text-right">June 2023 - August 2023</p>
 </div>
 <div class="flex justify-between">
-<p class="text-left"><span>DESKERA (Remote)</span></p>
-<p class="text-right italic">Location</p>
+<p class="text-left"><span>Remote, Singapore</span></p>
 </div>
 <ul class="list-disc ml-6">
 <li>Developed a chatbot enabling seamless data migration between platforms, involving file conversion logic, API development, and backend work.</li>
 <li>Enhanced user experience by crafting intuitive prompts for the chatbot and explored error-checking ML models for data migration reliability.</li>
+<li>Acquired practical skills in machine learning, API design, and backend development while contributing to a real-world project.</li>
 </ul>
 </div>
-<!-- Internship 02 -->
+<!-- Exp02 -->
 <div>
 <div class="flex justify-between">
-<p class="text-left"><span class="font-bold">Intern</span></p>
+<p class="text-left"><span class="font-bold">Web Development Intern, Apkiwebsite.com</span></p>
 <p class="text-right">Sept 2021 - April 2022</p>
 </div>
 <div class="flex justify-between">
-<p class="text-left"><span>Apkiwebsite.com, Delhi</span></p>
-<p class="text-right italic">Location</p>
+<p class="text-left"><span>Delhi, India</span></p>
 </div>
 <ul class="list-disc ml-6">
 <li>Gained hands-on experience in WordPress development, customizing themes, and optimizing website performance.</li>
+<li>Engaged in client-focused work by analyzing product requirements, translating them into development plans, and maintaining effective communication.</li>
 <li>Learned essential interpersonal skills and effective client communication, gaining insights into real-world project dynamics.</li>
 </ul>
 </div>
@@ -721,35 +725,59 @@ video {
 <!-- Projects -->
 <div class="space-y-2">
 <p class="font-bold border-b-2 border-black">PROJECTS</p>
-<!-- Project 01 -->
+<!-- Project01 -->
 <div>
-<p><span class="font-semibold text-sm">Fake News Detection</span> - Utilized Deep Learning and Machine Learning techniques to identify fake news. Implemented models for detection, enhancing media literacy. <a class="text-blue-700 text-sm" href="https://github.com/harshit-singh-2k20/Fake-News-Detection">(GitHub Link)</a></p>
-</div>
-<!-- Project 02 -->
-<div>
-<p><span class="font-semibold text-sm">Complex Repo Ranking</span> - Developed a tool to rank the most intricate repositories in a user's GitHub profile. Utilizing the GitHub API and LLM to predict the complexity score for each of the repositories. <a class="text-blue-700 text-sm" href="https://github.com/harshit-singh-2k20/Complex-Repo-Ranking">(GitHub Link)</a></p>
-</div>
-<!-- Project 03 -->
-<div>
-<p><span class="font-semibold text-sm">Stock Prediction</span> - Employed LSTM and Random Forest on real-time Yahoo Finance dataset and Tiingo. Predicted stock trends for informed decision-making. <a class="text-blue-700 text-sm" href="https://github.com/harshit-singh-2k20/Stock-Prediction">(GitHub Link)</a></p>
-</div>
-</div>
-<!-- Extra-curricular activities -->
-<div class="space-y-2">
-<p class="font-bold border-b-2 border-black">EXTRA-CURRICULAR ACTIVITIES</p>
+<p><span class="font-semibold text-sm">Fake News Detection</span> - Python, Colab, TensorFlow, Keras, Scikit-Learn, Matplotlib, Pandas, Machine Learning, Deep Learning</p>
 <ul class="list-disc ml-6">
-<li>Ex-Rajiv Gandhi Stadium football team member, honing leadership in regular matches.</li>
-<li>Start-up involvement (apkiwebsite.com, theeskape.com, bigybiz) for web development and entrepreneurship skills.</li>
+<li>Utilized Deep Learning and Machine Learning techniques to identify fake news.</li>
+<li>Implemented models for detection, enhancing media literacy.</li>
+</ul>
+</div>
+<!-- Project02 -->
+<div>
+<p><span class="font-semibold text-sm">Complex Repo Ranking</span> - GitHub API, Python, Streamlit, Codespaces, OpenAI, LLM</p>
+<ul class="list-disc ml-6">
+<li>Developed a tool to rank the most intricate repositories in a user's GitHub profile.</li>
+<li>Utilized the GitHub API and LLM to predict the complexity score for each of the repositories.</li>
+</ul>
+</div>
+<!-- Project03 -->
+<div>
+<p><span class="font-semibold text-sm">Stock Prediction</span> - LSTM, Random Forest, Python, Matplotlib, NumPy, Pandas, Scikit-Learn</p>
+<ul class="list-disc ml-6">
+<li>Employed LSTM and Random Forest on real-time Yahoo Finance dataset and Tiingo.</li>
+<li>Predicted stock trends for informed decision-making.</li>
+</ul>
+</div>
+</div>
+<!-- Co-curriculars -->
+<div class="space-y-2">
+<p class="font-bold border-b-2 border-black">CO-CURRICULARS</p>
+<ul class="list-disc ml-6">
+<li>Former Rajiv Gandhi Stadium Football Team Member: Developed leadership skills through active participation in regular matches as a member of the Rajiv Gandhi Stadium football team.</li>
+<li>Entrepreneurial Experience in Start-ups: Contributed to web development and honed entrepreneurship skills through involvement in start-ups including apkiwebsite.com, theeskape.com, and bigybiz.</li>
+<li>Support to Instagram/YouTube Creators: Demonstrated effective communication and marketing prowess by assisting Instagram and YouTube creators in their endeavors.</li>
 </ul>
 </div>
 <!-- Positions of Responsibility -->
 <div class="space-y-2">
 <p class="font-bold border-b-2 border-black">POSITIONS OF RESPONSIBILITY</p>
 <ul class="list-disc ml-6">
-<li>Co-founded Dr's café and successfully organized many events.</li>
-<li>Organized a team of good people for my startup - theeskape.com.</li>
-<li>Worked as a team leader in different projects for hackathons.</li>
+<li>Co-founded Dr's Café and Organized Successful Events: Played a key role in co-founding Dr's Café and excelled in event management, enhancing organizational and teamwork skills.</li>
+<li>Founded theeskape.com Startup for AI-Driven Travel: Established theeskape.com startup, leveraging AI to automate travel planning and bookings, while leading a dedicated team.</li>
+<li>Led Diverse Hackathon Projects as Team Leader: Demonstrated effective leadership by guiding teams through various hackathon projects, showcasing technical expertise and collaboration.</li>
+<li>Ongoing Patent Application: Actively pursuing a patent application, showcasing a commitment to innovative thinking and contributing to technological advancement.</li>
 </ul>
+</div>
+<!-- Skills and Interests -->
+<div class="space-y-2">
+<p class="font-bold border-b-2 border-black">SKILLS AND INTERESTS</p>
+<p>Analytical: SQL, Microsoft Office Suite (Excel, PowerPoint, Word), Canva, Python (Pandas, NumPy, Scikit Learn)</p>
+<p>Languages: C++, C, Python</p>
+<p>Technical Knowledge: Machine Learning, Deep learning, NLP, SNLU, Prompt Engineering, LLM</p>
+<p>Framework: TensorFlow, Keras, Pandas, Scikit-Learn, Streamlit, NumPy, Matplotlib</p>
+<p>Tools: VSCode, Sublime, Google Colab, Kaggle, Git, GitLab, GitHub</p>
+<p>Interests: Entrepreneurship, Music, Travelling, Technology, Science, Artificial Intelligence</p>
 </div>
 </div>
 </body>
